🐛 small display bug on mobile with wrong bulma layout

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,3 +18,8 @@
 html, body {
   font-family: var(--font-primary) !important;
 }
+
+.soundcloud-djkat-link {
+  width: 100%;
+  height: 100%;
+}
